--- a/Entity Framework Core/Entity-Relations-Exercise/P03_FootballBetting/P03_FootballBetting.csproj
+++ b/Entity Framework Core/Entity-Relations-Exercise/P03_FootballBetting/P03_FootballBetting.csproj
@@ -5,4 +5,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\P03_FootballBetting.Data\P03_FootballBetting.Data.csproj" />
+  </ItemGroup>
+
 </Project>
