--- a/Entity Framework Core/LINQ-Exercise/MusicHub/MusicHub.csproj
+++ b/Entity Framework Core/LINQ-Exercise/MusicHub/MusicHub.csproj
@@ -5,4 +5,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Models\Enums\" />
+  </ItemGroup>
+
 </Project>
