--- a/Entity Framework Core/JSON-Processing-Exercise/CarDealer/CarDealer.csproj
+++ b/Entity Framework Core/JSON-Processing-Exercise/CarDealer/CarDealer.csproj
@@ -13,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\" />
+    <Compile Update="Data\CarDealerContext.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
 </Project>
